--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "description": "Production server for Max IT IoT project",
   "main": "server.js",
   "scripts": {
-  "start": "node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "archiver": "^5.3.1",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-  "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-  "archiver": "^5.3.1",
     "mongodb": "^6.8.0",
-    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
     "pm2": "^6.0.13",
     "socket.io": "^4.7.5"
   },
